--- a/story.html
+++ b/story.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="icon" type="image/jpeg" href="./assets/favicon.jpg">
   <title>그릿에듀 | 이야기</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="icon" type="image/jpeg" href="/assets/favicon.png">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
-
 <body>
-<header class="grit-header grit-preload"></header>
-  <main class="grit-section">
 
-    <!-- 상단 가운데 정렬 제목 -->
+  <!-- 헤더/푸터는 /assets/js/common.js 에서 주입됩니다 -->
+
+  <main class="grit-section">
     <h1 class="page-title">그릿에듀 이야기</h1>
 
     <section>
@@ -57,15 +56,15 @@
       <p>GRIT EDU는 오늘도 아이들의 미래를 함께 고민합니다. 단단하고 올바른 마음을 기르는 교육, 그 철학을 지켜나가겠습니다.</p>
     </section>
 
-    <!-- 하단 CTA: 두 개만 -->
     <section class="cta">
       <h2>🙌 함께하는 우리</h2>
       <p>아이들의 꿈과 성장을 응원하는 강사진, 그리고 끝까지 해내는 힘을 길러주는 GRIT EDU가 함께합니다.</p>
-      <a href="./contact.html">상담 신청하기</a>
-      <a href="./instructors.html">강사진 보러가기</a>
+      <a href="/contact.html" class="btn">상담 신청하기</a>
+      <a href="/instructors.html" class="btn secondary">강사진 보러가기</a>
     </section>
-
   </main>
-  <script type="module" src="./assets/js/common.js"></script>
+
+  <!-- 공통 UI (헤더/푸터) -->
+  <script type="module" src="/assets/js/common.js"></script>
 </body>
 </html>
