--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -9,7 +9,29 @@
 </head>
 <body style="min-height:100vh;">
 
-  <!-- 헤더/푸터는 /assets/js/common.js 에서 주입 -->
+  <header class="grit-header fixed" aria-label="Site header">
+    <div class="grit-header__wrap">
+      <a class="grit-logo" href="/" aria-label="그릿에듀 홈">
+        <img src="/assets/logo.png" alt="그릿에듀" />
+      </a>
+      <nav class="grit-nav" aria-label="주 메뉴">
+        <ul>
+          <li><a href="/">그릿에듀</a></li>
+          <li><a href="/story.html">이야기</a></li>
+          <li><a href="/instructors.html">강사진</a></li>
+          <li><a href="/gallery.html">갤러리</a></li>
+          <li><a href="/contact.html">문의</a></li>
+          <li><a href="/members/dashboard.html" id="menu-myclass" style="display:none;">내 강의실</a></li>
+          <li><a href="/login.html" id="menu-login">로그인</a></li>
+          <li><a href="#" id="menu-logout" style="display:none;">로그아웃</a></li>
+        </ul>
+      </nav>
+      <button class="menu-toggle" id="menuToggle" aria-label="메뉴 열기/닫기">
+        <span></span><span></span><span></span>
+      </button>
+    </div>
+  </header>
+
   <main class="container" style="padding:24px; margin-top:64px;">
     <h1 style="margin:0 0 16px; font-size:24px; font-weight:800;">내 강의실</h1>
 
@@ -301,6 +323,38 @@
       `;
     }
   </script>
+
+  <footer class="grit-footer" style="margin-top:40px;border-top:1px solid #eee;background:#fff;">
+    <div class="grit-footer-inner" style="max-width:1080px;margin:0 auto;padding:20px 16px;text-align:center;">
+      <div class="grit-footer-sns" style="display:flex;justify-content:center;gap:16px;margin-bottom:8px;">
+        <a href="https://www.instagram.com/grit_edu_seoul/" target="_blank" rel="noopener" aria-label="Instagram" class="sns" style="opacity:.85;">
+          <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true">
+            <rect x="2" y="2" width="20" height="20" rx="5" fill="#222"></rect>
+            <circle cx="12" cy="12" r="5.2" fill="#fff"></circle>
+            <circle cx="12" cy="12" r="3.8" fill="#222"></circle>
+            <circle cx="17.5" cy="6.5" r="1" fill="#fff"></circle>
+          </svg>
+        </a>
+        <a href="https://www.youtube.com/@gritedu_official" target="_blank" rel="noopener" aria-label="YouTube" class="sns" style="opacity:.85;">
+          <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true">
+            <rect x="2" y="2" width="20" height="20" rx="5" fill="#222"></rect>
+            <polygon points="10,8 16,12 10,16" fill="#fff"></polygon>
+          </svg>
+        </a>
+        <a href="https://blog.naver.com/gritedu" target="_blank" rel="noopener" aria-label="Naver Blog" class="sns" style="opacity:.85;">
+          <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true">
+            <rect x="2" y="2" width="20" height="20" rx="5" fill="#222"></rect>
+            <path d="M8 7h2.6l3 4.3V7H16v10h-2.6L10.4 12v5H8Z" fill="#fff"></path>
+          </svg>
+        </a>
+      </div>
+      <p style="margin:4px 0;color:#333;">© 2025 그릿에듀 | 서울 금천구 시흥대로47길 28-5 남서울교육문화센터 5층</p>
+      <p style="margin:4px 0;color:#333;">Tel : 02-809-0611</p>
+    </div>
+  </footer>
+
+  <!-- 공통 UI -->
+  <script type="module" src="/assets/js/common.js"></script>
 
   <style>
     @media (max-width: 768px) {
